<resources>
    <string name="app_name">Bluetooth Test Suite</string>
    <string name="bredr_on_off">On/Off</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="cycle_test">Cycle Test</string>
    <string name="bredr_inquiry">BREDR Inquiry</string>
    <string name="bond">Create/Remove Bond</string>
    <string name="spp">SPP</string>
    <string name="bredr_l2cap">BREDR L2CAP</string>
    <string name="ble_l2cap">BLE L2CAP</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="ble_scan">BLE Scan</string>
    <string name="ble_central">BLE Central</string>
    <string name="ble_peripheral">BLE Peripheral</string>
</resources>
