<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_on_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryOnOffActivity"
            android:text="@string/bredr_on_off"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_bredr_inquiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryBredrInquiryActivity"
            android:text="@string/bredr_inquiry"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_on_off"
            app:layout_constraintStart_toStartOf="@+id/button_on_off"
            app:layout_constraintTop_toBottomOf="@+id/button_on_off" />

        <Button
            android:id="@+id/button_bond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryBondActivity"
            android:text="@string/bond"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_bredr_inquiry"
            app:layout_constraintStart_toStartOf="@+id/button_bredr_inquiry"
            app:layout_constraintTop_toBottomOf="@+id/button_bredr_inquiry" />

        <Button
            android:id="@+id/button_spp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entrySppActivity"
            android:text="@string/spp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_bond"
            app:layout_constraintStart_toStartOf="@+id/button_bond"
            app:layout_constraintTop_toBottomOf="@+id/button_bond" />

        <Button
            android:id="@+id/button_bredr_l2cap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryBredrL2capActivity"
            android:text="@string/bredr_l2cap"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_spp"
            app:layout_constraintStart_toStartOf="@+id/button_spp"
            app:layout_constraintTop_toBottomOf="@+id/button_spp" />

        <Button
            android:id="@+id/button_ble_peripheral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryBlePeripheralActivity"
            android:text="@string/ble_peripheral"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_bredr_l2cap"
            app:layout_constraintStart_toStartOf="@+id/button_bredr_l2cap"
            app:layout_constraintTop_toBottomOf="@+id/button_bredr_l2cap" />

        <Button
            android:id="@+id/button_ble_central"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryBleCentralActivity"
            android:text="@string/ble_central"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_ble_peripheral"
            app:layout_constraintStart_toStartOf="@+id/button_ble_peripheral"
            app:layout_constraintTop_toBottomOf="@+id/button_ble_peripheral" />

        <Button
            android:id="@+id/button_ble_l2cap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="entryBleL2capActivity"
            android:text="@string/ble_l2cap"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/button_ble_central"
            app:layout_constraintStart_toStartOf="@+id/button_ble_central"
            app:layout_constraintTop_toBottomOf="@+id/button_ble_central" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>